WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11329
Gmail Editor: Can't remove styling applied to selection after clicking "Remove Formatting" toolbar icon.
https://bugs.webkit.org/show_bug.cgi?id=11329
Summary
Gmail Editor: Can't remove styling applied to selection after clicking "Remov...
Chris Petersen
Reported
2006-10-17 15:15:10 PDT
* SUMMARY In a rich text message, I can't remove any styling in the active selection after clicking the "Remove Formatting" toolbar icon. * STEPS TO REPRODUCE 1. With
r17089
, login to your Gmail account 2. Create a new rich text message 3. Type a sentence in the message body field 4. Select this entire sentence and click on B, I , or U . Verify this styling is applied to this sentence 5. With the selection still applied to this text, click on "Remove Formatting" toolbar icon. 6. Notice the styling is NOT removed from the selected text. * RESULTS Styling should be removed from the selected text but isn't * NOTES Basically, any styled text I have selected will not have it's style removed which includes: Italic, Bold, Underline, background color, text color, font face, font size, indented text, aligned text, and lists. With FF 1.0.5.7, clicking "Remove Formatting" removes all styling from the selected text regardless.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Petersen
Comment 1
2006-10-17 15:17:04 PDT
This is filed as <
rdar://problem/4786286
>
Justin Garcia
Comment 2
2006-10-26 12:51:55 PDT
Fixed in
r17337
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug