LayoutTests:

Reviewed by john

        <http://bugs.webkit.org/show_bug.cgi?id=11329>
        Gmail Editor: Can't remove styling applied to selection after clicking "Remove Formatting" toolbar icon.

        * editing/execCommand/remove-formatting-2-expected.checksum: Added.
        * editing/execCommand/remove-formatting-2-expected.png: Added.
        * editing/execCommand/remove-formatting-2-expected.txt: Added.
        * editing/execCommand/remove-formatting-2.html: Added.
        * editing/execCommand/remove-formatting-expected.txt:

WebCore:

        Reviewed by john

        <http://bugs.webkit.org/show_bug.cgi?id=11329>
        Gmail Editor: Can't remove styling applied to selection after clicking "Remove Formatting" toolbar icon.

        * editing/Editor.cpp:
        (WebCore::Editor::removeFormattingAndStyle): Moved from JSEditor.
        Wrapped the plain text fragment in a style span with the document
        default style so that it will appear unstyled regardless of where
        it is inserted.  Could have also inserted the plain text fragment
        and then applied the document default style to it, but there is not
        yet any redundant style prevention in ApplyStyleCommand, so this
        is cleaner.
        * editing/Editor.h:
        * editing/JSEditor.cpp:



Canonical link: https://commits.webkit.org/14577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17337 268f45cc-cd09-0410-ab3c-d52691b4dbfc