WebCore/editing/Editor.h
@@ -61,6 +61,8 @@ public:
     
     Frame::TriState selectionUnorderedListState() const;
     Frame::TriState selectionOrderedListState() const;
+    
+    void removeFormattingAndStyle();
 
     Frame* frame() const { return m_frame; }
     DeleteButtonController* deleteButtonController() const { return m_deleteButtonController.get(); }
